updating index and readme to account for angularjs addition

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@ changes to code. At present, JavaScriptMVC is the only framework included which 
 <li><a href="todo-example/knockoutjs/index.html">KnockoutJS (MVVM)</a></li> 
 <li><a href="todo-example/sproutcore/index.html">SproutCore</a></li> 
 <li><a href="todo-example/yuilibrary/index.html">YUILibrary</a></li> 
+<li><a href="todo-example/angularjs/index.html">AngularJS</a></li> 
 </ul> </section> <!-- /.widget -->
 
 <section class="widget"> <h4 class="widgettitle">GitHub</h4> <ul> <li><a
@@ -115,6 +116,7 @@ href="http://twitter.com/jeromegn">Jérôme Gravel-Niquet</a></li> <li><a
 href="http://twitter.com/macmann">Alex MacCaw</a></li> 
 <li><a href="">Ashish Sharma</a></li> 
 <li><a href="http://sproutcore.com">Tom Dale, Yehuda Katz</a></li> 
+<li><a href="http://cburgdorf.wordpress.com/">Christoph Burgdorf</a></li>
 <li><a href="http://developer.yahoo.com">The YUI team</a></li> 
 
 </ul>
