upgrading sproutcore 2.0 example to use jQuery 1.6.4. Adding local copy of jQuery for this purpose as well

--- a/todo-example/sproutcore/index.html
+++ b/todo-example/sproutcore/index.html
@@ -70,7 +70,7 @@
 	    </div>
 
 	            
-  <script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.6.1.min.js"%3E%3C/script%3E'))</script>
+  <script src="js/libs/jquery-1.6.4.min.js"></script>
   <script src="js/libs/sproutcore-2.0.a.3.min.js"></script>
   <script src="js/app.js"></script>
 </body>
