--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ href="https://github.com/addyosmani/todomvc/">View repository</a></li> </ul>
 href="http://twitter.com/addyosmani">Addy Osmani</a></li> <li><a
 href="http://twitter.com/justinbmeyer">Justin Meyer</a></li> <li><a
 href="http://twitter.com/jeromegn">Jérôme Gravel-Niquet</a></li> <li><a
-href="http://twitter.com/macmann">Alex MacCaw</a></li> 
+href="http://alexmaccaw.co.uk">Alex MacCaw</a></li> 
 <li><a href="">Ashish Sharma</a></li> 
 <li><a href="http://sproutcore.com">Tom Dale, Yehuda Katz</a></li> 
 <li><a href="http://cburgdorf.wordpress.com/">Christoph Burgdorf</a></li>
