updating index and readme to reflect addition of broke.js

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ go in and start making changes to examples right away.</p>
 <li><a href="todo-example/knockoutjs/index.html">KnockoutJS (MVVM)</a></li> 
 <li><a href="todo-example/yuilibrary/index.html">YUILibrary</a></li> 
 <li><a href="todo-example/angularjs/index.html">AngularJS</a></li> 
+<li><a href="todo-example/broke/index.html">Broke.js</a></li> 
 </ul> </section> <!-- /.widget -->
 
 <section class="widget"> <h4 class="widgettitle">GitHub</h4> <ul> <li><a
