updating backbone todo to use latest jQuery

--- a/todo-example/backbone/index.html
+++ b/todo-example/backbone/index.html
@@ -5,7 +5,7 @@
     <title>Backbone.js</title>
     <link href="css/todos.css" media="all" rel="stylesheet" type="text/css"/>
     <script src="js/json2.js"></script>
-    <script src="js/jquery-1.5.js"></script>
+    <script src="js/jquery-1.6.4.min.js"></script>
     <script src="js/underscore-1.1.6.js"></script>
     <script src="js/backbone.js"></script>
     <script src="js/backbone-localstorage.js"></script>
