--- a/todo-example/extjs/index.html
+++ b/todo-example/extjs/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>ExtJS</title>
 
@@ -15,31 +15,22 @@
     <body>
 
         <div class="container">
-            <div class="content">
+            <!-- <div class="content">
                 <h1>Todos</h1>
                 <div id="textfield"></div>
-                <div id="list">
-                    <!-- <div class="row">
-                        <input type="checkbox" />
-                        <span>fdslf fdsqf,dmqf dqfdq,fdlmqsfd</span>
-                    </div>
-                    <div class="row">
-                        <input type="checkbox" />
-                        <span>fdslf fdsqf,dmqf dqfdq,fdlmqsfd</span>
-                    </div> -->
-                </div>
+                <div id="list"></div>
                 <div class="toolbar">
                     <div id="clearbutton"></div>
                     <div id="info"></div>
                     <div style="clear: both;"></div>
                 </div>
-            </div>
+            </div> -->
             <div class="credits">
                 Credits:<br /><a href="http://revolunet.com/">Revolunet</a>
             </div>
         </div>
 
         <script type="text/javascript" src="http://extjs.cachefly.net/ext-4.0.2a/ext-all.js"></script>
-        <script src="js/app.js"></script>
+        <script src="js/app2.js"></script>
     </body>
 </html>
