--- a/todo-example/extjs/index.html
+++ b/todo-example/extjs/index.html
@@ -7,30 +7,16 @@
 
         <title>ExtJS</title>
 
-        <link rel="shortcut icon" href="/favicon.ico">
-        <link rel="apple-touch-icon" href="/apple-touch-icon.png">
         <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
-
-        <div class="container">
-            <!-- <div class="content">
-                <h1>Todos</h1>
-                <div id="textfield"></div>
-                <div id="list"></div>
-                <div class="toolbar">
-                    <div id="clearbutton"></div>
-                    <div id="info"></div>
-                    <div style="clear: both;"></div>
-                </div>
-            </div> -->
-            <div class="credits">
-                Credits:<br /><a href="http://revolunet.com/">Revolunet</a>
-            </div>
+        <div id="todo"></div>
+        <div class="credits">
+            Credits:<br /><a href="http://revolunet.com/">Revolunet</a>
         </div>
 
-        <script type="text/javascript" src="http://extjs.cachefly.net/ext-4.0.2a/ext-all.js"></script>
-        <script src="js/app2.js"></script>
+        <script type="text/javascript" src="http://extjs.cachefly.net/ext-4.0.2a/bootstrap.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
