Add count on Clear button
Also some selector caching and other small optimizations.

--- a/todo-example/jquery/index.html
+++ b/todo-example/jquery/index.html
@@ -30,9 +30,7 @@
 		<ul class="items"></ul>
 		<footer>
 			<a class="clear">Clear completed</a>
-			<div class="count">
-				<span class="countVal"></span> items left
-			</div>
+			<div class="count"></div>
 		</footer>
 	</div>
 	<div id='instructions'>
