speed of rendering + show/hide clear button + css fix

--- a/todo-example/extjs/index.html
+++ b/todo-example/extjs/index.html
@@ -11,7 +11,10 @@
     </head>
 
     <body>
-        <div id="todo"></div>
+        <div id="todo">
+            <h1>Todos</h1>
+            <input type="text" id="taskfield" placeholder="What needs to be done?" />
+        </div>
         <div class="credits">
             Credits:<br /><a href="http://revolunet.com/">Revolunet</a>
         </div>
