Added pure js version

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 <li><a href="todo-example/angularjs/persistencejs/index.html">Angular + PersistenceJS</a></li> 
 <li><a href="todo-example/broke/index.html">Broke.js</a></li> 
 <li><a href="todo-example/fidel/index.html">Fidel.js</a></li>
+<li><a href="todo-example/vanillajs/index.html">Vanilla JS</a></li>
           </ul>
 
           <h5>Contributors</h5>
@@ -104,6 +105,7 @@
             <li><a href="http://developer.yahoo.com">The YUI team</a></li> 
             <li><a href="https://github.com/jacobmumm">Jacob Mumm</a></li>
             <li><a href="https://github.com/brokenseal">Davide Callegari</a></li>
+			<li><a href="https://twitter.com/ffesseler">Florian Fesseler</a></li>
           </ul>
 
           <h5>Coming Soon</h5>
@@ -112,6 +114,7 @@
             <li>Dojo Todo app (with MVC patterns)</li>
             <li>Batman.js Todo app</li>
             <li>Todo app boilerplate</li>
+			<li>Todo app pure JS : no framework, no MVC</li>
           </ul>
 
         </div>
