updating sproutcore example to emberjs. Minor changes in namespacing required. Switch from parentViews as required by last release of SC

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <h5>Examples Included For:</h5>
           <ul>
 
-        <li><a href="http://www.sproutcore.com/">SproutCore</a></li> 
+        <li><a href="http://www.emberjs.com/">Ember.js (SproutCore 2.0)</a></li> 
         <li><a href="http://javascriptmvc.com/">JavaScriptMVC</a></li> 
         <li><a href="http://documentcloud.github.com/backbone/">Backbone.js</a></li>  
         <li><a href="http://spinejs.com/">Spine.js</a></li>
@@ -70,7 +70,7 @@
           <h5>0.2 Changelog</h5>
           <ul>
             <li>Patches to existing applications</li>
-            <li>Sylistic updates</li>
+            <li>Further updates</li>
             <li><span class="label">New</span> AngularJS examples</li>
             <li><span class="label">New</span> Broke.js example</li>
             <li><span class="label">New</span> YUILibrary example</li>
@@ -79,7 +79,7 @@
 
           <h5>Live demos</h5>
           <ul>
-<li><a href="todo-example/sproutcore/index.html">SproutCore 2.0</a></li> 
+<li><a href="todo-example/emberjs/index.html">Ember.js</a></li> 
 <li><a href="todo-example/javascriptmvc/todo/todo/index.html">JavaScriptMVC</a></li> 
 <li><a href="todo-example/spine/index.html">Spine.js</a></li>
 <li><a href="todo-example/backbone/index.html">Backbone.js</a></li>  
@@ -99,7 +99,7 @@
             <li><a href="http://twitter.com/justinbmeyer">Justin Meyer</a></li> 
             <li><a href="http://twitter.com/macmann">Alex MacCaw</a></li> 
             <li><a href="">Ashish Sharma</a></li> 
-            <li><a href="http://sproutcore.com">Tom Dale, Yehuda Katz</a></li> 
+            <li><a href="http://emberjs.com">Tom Dale, Yehuda Katz</a></li> 
             <li><a href="http://cburgdorf.wordpress.com/">Christoph Burgdorf</a></li>
             <li><a href="http://developer.yahoo.com">The YUI team</a></li> 
             <li><a href="https://github.com/jacobmumm">Jacob Mumm</a></li>
@@ -149,7 +149,7 @@
 
       <div class="span12">
               <h2>Introduction</h2>
-  <p>Developers these days are spoiled with choice when it comes to selecting an <strong>MVC framework</strong> for structuring and organizing JavaScript web apps. Backbone, Spine, SproutCore, JavaScriptMVC..the list of new and stable solutions goes on and on, but just how do you <strong>decide</strong> on which to use in a sea of so many options?.</p>
+  <p>Developers these days are spoiled with choice when it comes to selecting an <strong>MVC framework</strong> for structuring and organizing JavaScript web apps. Backbone, Spine, Ember.js (SproutCore 2.0), JavaScriptMVC..the list of new and stable solutions goes on and on, but just how do you <strong>decide</strong> on which to use in a sea of so many options?.</p>
 
   <p>To help solve this problem, I created <a href="http://github.com/addyosmani/todomvc">TodoMVC</a> - a project which offers the same Todo application implemented using MVC concepts in most of the popular JavaScript MVC frameworks of today. Solutions look and feel the same, have a common simple feature-set and make it <strong>easy</strong> for you to compare the syntax and structure of different frameworks so you can select the one you feel the most comfortable with.</p>
   </div>
