--- a/todo-example/vanillajs/index.html
+++ b/todo-example/vanillajs/index.html
@@ -3,6 +3,7 @@
     <head>
         <link href="css/todos.css" rel="stylesheet" type="text/css">
         <script src="js/todo.js"></script>
+		<script src="js/json2.js"></script>
     </head>
 
     <body onload="bodyLoadHandler()">
