These changes address a keyboard navigation issue which made it impossible to tab to the "clear all" link. Only CSS was changed save fidel, which needed an href on the link to allow tabbing to it.  I did not edit source (less,scss) files.

--- a/todo-example/fidel/index.html
+++ b/todo-example/fidel/index.html
@@ -65,7 +65,7 @@
       {! } !}
       {! if (done) { !}
         <span class="todo-clear">
-          <a data-action="clearCompleted">
+          <a data-action="clearCompleted" href="#">
             Clear <span class="number-done">{!= done !}</span>
             completed <span class="word-done">{!= done == 1 ? 'item' : 'items' !}</span>
           </a>
