--- a/todo-example/backbone/index.html
+++ b/todo-example/backbone/index.html
@@ -30,6 +30,8 @@
         </div>
 
         <div id="todos">
+          <input class="check mark-all-done" type="checkbox"/>
+          <label for="check-all">Mark all as complete</label>
           <ul id="todo-list"></ul>
         </div>
 
@@ -52,7 +54,7 @@
       <div class="todo <%= done ? 'done' : '' %>">
         <div class="display">
           <input class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> />
-          <div class="todo-content"><%= content %></div>
+          <label class="todo-content"><%= content %></label>
           <span class="todo-destroy"></span>
         </div>
         <div class="edit">
