Resubmission of Knockback including an upgrade of Knockout to 2.0.0

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <li><a href="http://documentcloud.github.com/backbone/">Backbone.js</a></li>  
         <li><a href="http://spinejs.com/">Spine.js</a></li>
         <li><a href="http://sammyjs.org/">Sammy.js</a></li> 
+        <li><a href="http://kmalakoff.github.com/knockback/">Knockback.js</a></li>
         <li><a href="http://knockoutjs.com/">KnockoutJS</a></li> 
         <li><a href="http://developer.yahoo.com/yui/">YUILibrary</a></li> 
         <li><a href="http://angularjs.org/">AngularJS</a></li> 
@@ -84,6 +85,8 @@
 <li><a href="todo-example/spine/index.html">Spine.js</a></li>
 <li><a href="todo-example/backbone/index.html">Backbone.js</a></li>  
 <li><a href="todo-example/sammyjs/index.html">Sammy.js</a></li> 
+<li><a href="todo-example/knockback/todos-classic/index.html">Knockback.js (Classic)</a></li>
+<li><a href="todo-example/knockback/todos-extended/index.html">Knockback.js (Extended)</a></li>
 <li><a href="todo-example/knockoutjs/index.html">KnockoutJS (MVVM)</a></li> 
 <li><a href="todo-example/yuilibrary/index.html">YUILibrary</a></li> 
 <li><a href="todo-example/angularjs/main/index.html">AngularJS</a></li> 
@@ -104,6 +107,7 @@
             <li><a href="http://developer.yahoo.com">The YUI team</a></li> 
             <li><a href="https://github.com/jacobmumm">Jacob Mumm</a></li>
             <li><a href="https://github.com/brokenseal">Davide Callegari</a></li>
+            <li><a href="https://github.com/kmalakoff">Kevin Malakoff</a></li>
           </ul>
 
           <h5>Coming Soon</h5>
