--- a/todo-example/backbone_require/index.html
+++ b/todo-example/backbone_require/index.html
@@ -22,6 +22,8 @@
         </div>
 
         <div id="todos">
+          <input class="check mark-all-done" type="checkbox"/>
+          <label for="check-all">Mark all as complete</label>
           <ul id="todo-list"></ul>
         </div>
 
