Adding backbone.js with RequireJS to the list of examples.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 <li><a href="todo-example/javascriptmvc/todo/todo/index.html">JavaScriptMVC</a></li> 
 <li><a href="todo-example/spine/index.html">Spine.js</a></li>
 <li><a href="todo-example/backbone/index.html">Backbone.js</a></li>  
+<li><a href="todo-example/backbone_require/index.html">Backbone.js + RequireJS</a></li>  
 <li><a href="todo-example/sammyjs/index.html">Sammy.js</a></li> 
 <li><a href="todo-example/knockoutjs/index.html">KnockoutJS (MVVM)</a></li> 
 <li><a href="todo-example/yuilibrary/index.html">YUILibrary</a></li> 
