Converting to the suggested type value.

--- a/todo-example/emberjs/index.html
+++ b/todo-example/emberjs/index.html
@@ -32,7 +32,7 @@
   
   <div class="content">
   
-  <script type="text/html">
+  <script type="text/x-handlebars">
 
 {{#view id="create-todo"}}
   {{view Todos.CreateTodoView id="new-todo" placeholder="What needs to be done?"}}
