Adding some styling for completed tasks.

--- a/todo-example/emberjs/index.html
+++ b/todo-example/emberjs/index.html
@@ -45,8 +45,7 @@
 
 {{#view id="todos"}}
   {{#collection id="todo-list" contentBinding="Todos.todosController" tagName="ul" itemClassBinding="content.isDone"}}
-    {{view Ember.Checkbox titleBinding="content.title"
-        valueBinding="content.isDone"}}
+    {{view Ember.Checkbox titleBinding="content.title" valueBinding="content.isDone"}}
   {{/collection}}
 {{/view}}
   
