Optimize the jQuery selectors

--- a/todo-example/jquery/index.html
+++ b/todo-example/jquery/index.html
@@ -31,7 +31,7 @@
 	{{#this}}
 	<li class="item {{#if done}}done{{/if}}" data-id="{{id}}">
 		<div class="view" title="Double click to edit...">
-			<input type="checkbox" {{#if done}}checked="checked"{{/if}}>
+			<input class="toggle" type="checkbox" {{#if done}}checked="checked"{{/if}}>
 			<span>{{title}}</span>
 			<a class="destroy"></a>
 		</div>
