Got the binding for the clear completed visibility figured out using a global binding.

--- a/todo-example/emberjs/index.html
+++ b/todo-example/emberjs/index.html
@@ -50,8 +50,8 @@
 {{/view}}
   
     <!-- Insert this after the CreateTodoView and before the collection. -->
-  {{#view Todos.StatsView id="todo-stats"}}
-    {{#view Ember.Button target="Todos.todosController" action="clearCompletedTodos" content=this}}
+  {{#view Todos.StatsView id="todo-stats" content=this}}
+    {{#view Ember.Button target="Todos.todosController" action="clearCompletedTodos" classNameBindings="Todos.todosController.completeClass" content=this}}
       Clear {{content.completedString}} 
     {{/view}}
     {{remainingString}} left
