Remove jQuery-tmpl and update jQuery

--- a/todo-example/jquery/index.html
+++ b/todo-example/jquery/index.html
@@ -5,7 +5,7 @@
 	<title>jQuery</title>
 	<link rel="stylesheet" href="css/app.css">
 	<script src="js/json2.js"></script>
-	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery-1.7.1.min.js"></script>
 	<script src="js/handlebars-1.0.0.beta.6.js"></script>
 	<script src="js/app.js"></script>
 </head>
