revisions to index to cleanup some recent prs, prevent ember and sammy from initializing with a demo first task/todo

--- a/index.html
+++ b/index.html
@@ -80,25 +80,25 @@
 
           <h5>Live demos</h5>
           <ul>
-<li><a href="todo-example/emberjs/index.html">Ember.js</a></li> 
-<li><a href="todo-example/javascriptmvc/todo/todo/index.html">JavaScriptMVC</a></li> 
-<li><a href="todo-example/spine/index.html">Spine.js</a></li>
-<li><a href="todo-example/backbone/index.html">Backbone.js</a></li>  
-<li><a href="todo-example/backbone_require/index.html">Backbone.js + RequireJS</a></li>  
-<li><a href="todo-example/sammyjs/index.html">Sammy.js</a></li> 
-<li><a href="todo-example/knockback/todos-classic/index.html">Knockback.js (Classic)</a></li>
-<li><a href="todo-example/knockback/todos-extended/index.html">Knockback.js (Extended)</a></li>
-<li><a href="todo-example/knockoutjs/index.html">KnockoutJS (MVVM)</a></li> 
-<li><a href="todo-example/yuilibrary/index.html">YUILibrary</a></li> 
-<li><a href="todo-example/angularjs/main/index.html">AngularJS</a></li> 
-<li><a href="todo-example/angularjs/persistencejs/index.html">Angular + PersistenceJS</a></li> 
-<li><a href="todo-example/broke/index.html">Broke.js</a></li> 
-<li><a href="todo-example/fidel/index.html">Fidel.js</a></li>
+          <li><a href="todo-example/emberjs/index.html">Ember.js</a></li> 
+          <li><a href="todo-example/javascriptmvc/todo/todo/index.html">JavaScriptMVC</a></li> 
+          <li><a href="todo-example/spine/index.html">Spine.js</a></li>
+          <li><a href="todo-example/backbone/index.html">Backbone.js</a></li>  
+          <li><a href="todo-example/backbone_require/index.html">Backbone.js + RequireJS</a></li>  
+          <li><a href="todo-example/sammyjs/index.html">Sammy.js</a></li> 
+          <li><a href="todo-example/knockback/todos-classic/index.html">Knockback.js</a></li>
+          <li><a href="todo-example/knockoutjs/index.html">KnockoutJS (MVVM)</a></li> 
+          <li><a href="todo-example/yuilibrary/index.html">YUILibrary</a></li> 
+          <li><a href="todo-example/angularjs/main/index.html">AngularJS</a></li> 
+          <li><a href="todo-example/angularjs/persistencejs/index.html">Angular + PersistenceJS</a></li> 
+          <li><a href="todo-example/broke/index.html">Broke.js</a></li> 
+          <li><a href="todo-example/fidel/index.html">Fidel.js</a></li>
           </ul>
 
           <h5>Contributors</h5>
           <ul>
             <li><a href="http://twitter.com/addyosmani">Addy Osmani</a></li> 
+            <li><a href="https://github.com/boushley">Aaron Boushley</a></li>
             <li><a href="http://twitter.com/jeromegn">Jérôme Gravel-Niquet</a></li> 
             <li><a href="http://twitter.com/justinbmeyer">Justin Meyer</a></li> 
             <li><a href="http://twitter.com/macmann">Alex MacCaw</a></li> 
@@ -126,7 +126,7 @@
         <div class="hero-unit">
           <h1>TodoMVC</h1>
           <p>A common learning application for popular JavaScript MVC frameworks</p>
-          <p><a class="btn primary large" href="https://github.com/addyosmani/todomvc/zipball/v0.2">Download Version 0.2</a> &nbsp;
+          <p><a class="btn primary large" href="https://github.com/addyosmani/todomvc/zipball/master">Download (latest)</a> &nbsp;
           <a class="btn secondary large" href="http://github.com/addyosmani/todomvc">Follow On GitHub</a></p>
         </div>
 
