Change the hiding of the clear completed button to use more proper views and binding.

--- a/todo-example/emberjs/index.html
+++ b/todo-example/emberjs/index.html
@@ -51,8 +51,8 @@
   
     <!-- Insert this after the CreateTodoView and before the collection. -->
   {{#view Todos.StatsView id="todo-stats" content=this}}
-    {{#view Ember.Button target="Todos.todosController" action="clearCompletedTodos" classNameBindings="Todos.todosController.completeClass" content=this}}
-      Clear {{content.completedString}} 
+    {{#view Todos.ClearCompletedButtonView target="Todos.todosController" action="clearCompletedTodos" classNameBindings="completedButtonClass"}}
+      Clear {{completedString}} 
     {{/view}}
     {{remainingString}} left
   {{/view}}
