--- a/todo-example/knockoutjs/index.html
+++ b/todo-example/knockoutjs/index.html
@@ -3,7 +3,6 @@
 <head>
     <title>Knockout.js</title>
     <link href="css/todos.css" media="all" rel="stylesheet" type="text/css" />
-    <script src="js/knockout-2.0.0.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="todoapp">
@@ -66,92 +65,13 @@
         <a href="http://twitter.com/addyosmani">Addy Osmani</a>
     </div>
 
-    <script type="text/javascript">
-        (function() {
-            //represent a single todo item
-            var Todo = function (text) {
-                this.content = ko.observable(text);
-                this.done = ko.observable(false);
-                this.editing = ko.observable(false);
-            };
-
-            //can place methods on prototype, as there can be many todos
-            ko.utils.extend(Todo.prototype, {
-                edit: function() {  this.editing(true); },
-                stopEditing: function() { this.editing(false); }
-            });
-
-
-            //our main view model
-            var ViewModel = function() {
-                var self = this;
-                this.todos = ko.observableArray();
-                this.current = ko.observable();
-
-                //add a new todo, when enter key is pressed
-                this.add = function (data, event) {
-                    var newTodo = new Todo(self.current());
-                    self.todos.push(newTodo);
-                    self.current("");
-                };
-
-                //remove a single todo
-                this.remove = function (todo) {
-                    self.todos.remove(todo);
-                };
-
-                //remove all completed todos
-                this.removeCompleted = function () {
-                    self.todos.remove(function(todo) {
-                        return todo.done();
-                    });
-                };
-
-                //count of all completed todos
-                this.completedCount = ko.computed(function () {
-                    return ko.utils.arrayFilter(self.todos(), function(todo) {
-                        return todo.done();
-                    }).length;
-                });
-
-                //count of todos that are not complete
-                this.remainingCount = ko.computed(function () {
-                    return self.todos().length - self.completedCount();
-                });
-
-                //helper function to keep expressions out of markup
-                this.getLabel = function(count) {
-                    return ko.utils.unwrapObservable(count) === 1 ? "item" : "items";
-                };
-            };
-
-
-            //a custom binding to handle the enter key (could go in a separate library)
-            ko.bindingHandlers.enterKey = {
-                init: function(element, valueAccessor, allBindingsAccessor, data) {
-                    var wrappedHandler, newValueAccessor;
-
-                    //wrap the handler with a check for the enter key
-                    wrappedHandler = function(data, event) {
-                        if (event.keyCode === 13) {
-                            valueAccessor().call(this, data, event);
-                        }
-                    };
-
-                    //create a valueAccessor with the options that we would want to pass to the event binding
-                    newValueAccessor = function() {
-                        return { keyup: wrappedHandler };
-                    };
-
-                    //call the real event binding's init function
-                    ko.bindingHandlers.event.init(element, newValueAccessor, allBindingsAccessor, data);
-                }
-            };
-
-
-            //bind a new instance of our view model to the page
-            ko.applyBindings(new ViewModel());
-        })();
-    </script>
+    <!-- Knockout has no direct dependencies -->
+    <script src="js/knockout-2.0.0.js" type="text/javascript"></script>
+    <!-- needed to support JSON.stringify in older browsers (for local storage) -->
+    <script src="js/json2.js" type="text/javascript"></script>
+    <!-- used for local storage -->
+    <script src="js/amplify.store.min.js" type="text/javascript"></script>
+    <!-- our app code -->
+    <script src="js/todos.js" type="text/javascript"></script>
 </body>
 </html>
