--- a/todo-example/knockoutjs/index.html
+++ b/todo-example/knockoutjs/index.html
@@ -12,7 +12,7 @@
         <div class="content">
             <div id="create-todo">
                 <input id="new-todo" data-bind="value: current, valueUpdate: 'afterkeydown', enterKey: add" placeholder="What needs to be done?" />
-                <span class="ui-tooltip-top" style="display: none;">Press Enter to save this task</span>
+                <span class="ui-tooltip-top" data-bind="visible: showTooltip" style="display: none;">Press Enter to save this task</span>
             </div>
             <div id="todos">
                 <div data-bind="visible: todos().length">
