Finishing up after FF testing

--- a/todo-example/dojo/index.html
+++ b/todo-example/dojo/index.html
@@ -7,8 +7,7 @@
 			@import "./css/claro.css";
 	</style>
     <link href="css/todos.css" media="all" rel="stylesheet" type="text/css"/>
-    <!-- <script data-dojo-config="async:true, parseOnLoad:true, paths:{'todo':'../../todo'}" src="./js/dtk/dojo/dojo.js"></script> -->
-    <script data-dojo-config="async:true, parseOnLoad:true, paths:{'todo':'/code/todomvc/todo-example/dojo/js/todo'}" src="/code/DTK/dojotoolkit/dojo/dojo.js"></script> 
+    <script data-dojo-config="async:true, parseOnLoad:true, paths:{'todo':'../../todo'}" src="./js/dtk/dojo/dojo.js"></script> 
     <script>
         require(["dojo/parser", "todo/app"]) 
     </script>
