--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Backbone.js</title>
-    <link rel="stylesheet" href="css/todos.css"/>
+    <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
     <div id="todoapp">
@@ -34,33 +34,29 @@
         <a href="http://jgn.me/">J&eacute;r&ocirc;me Gravel-Niquet</a>. <br />Cleanup, edits: <a href="http://addyosmani.com">Addy Osmani</a>.
     </div>
 
-    <script src="js/json2.js"></script>
-    <script src="js/jquery-1.6.4.min.js"></script>
-    <script src="js/underscore-1.1.6.js"></script>
-    <script src="js/backbone.js"></script>
-    <script src="js/backbone-localstorage.js"></script>
-    <script src="js/todos.js"></script>
+    <script src="js/libs/json2.js"></script>
+    <script src="js/libs/jquery-1.7.1.min.js"></script>
+    <script src="js/libs/underscore-1.1.6.js"></script>
+    <script src="js/libs/backbone.js"></script>
+    <script src="js/libs/backbone-localstorage.js"></script>
+    <script src="js/app.js"></script>
 
     <!-- Templates -->
 
     <script type="text/template" id="item-template">
-        <li class="todo <%= done ? 'done' : '' %>">
-            <div class="view">
-                <input class="toggle" type="checkbox" <%= done ? 'checked="checked"' : '' %> />
-                <label><%= content %></label>
-                <a class="destroy"></span>
-            </div>
-            <input class="edit" type="text" value="<%= content %>" />
-        </li>
+        <div class="view">
+            <input class="toggle" type="checkbox" <%= done ? 'checked="checked"' : '' %> />
+            <label><%= content %></label>
+            <a class="destroy"></a>
+        </div>
+        <input class="edit" type="text" value="<%= content %>" />
     </script>
 
     <script type="text/template" id="stats-template">
         <% if (done) { %>
             <a id="clear-completed">Clear <%= done %> completed <%= done == 1 ? 'item' : 'items' %></a>
         <% } %>
-        <% if (total) { %>
-            <div class="todo-count"><%= remaining %> <%= remaining == 1 ? 'item' : 'items' %> left.</div>
-        <% } %>
+        <div class="todo-count"><%= remaining %> <%= remaining == 1 ? 'item' : 'items' %> left.</div>
     </script>
 
 </body>
