Updating the credit.

--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -30,7 +30,8 @@
     <div id="credits">
         Created by
         <br />
-        <a href="http://jgn.me/">J&eacute;r&ocirc;me Gravel-Niquet</a>. <br />Cleanup, edits: <a href="http://addyosmani.com">Addy Osmani</a>.
+        <a href="http://jgn.me/">J&eacute;r&ocirc;me Gravel-Niquet</a>.
+        <br />Cleanup, edits: <a href="http://addyosmani.com">Addy Osmani</a>, <a href="http://github.com/boushley">Aaron Boushley</a>.
     </div>
 
     <script src="js/libs/json2.js"></script>
